# hw3

./: CMakeLists.txt  Makefile  check_output.sh  hash_map.hpp  job-cori-starter  job-perlmutter-starter  kmer_hash.cpp  kmer_t.hpp  modules.sh  packing.hpp  read_kmers.hpp
